--- a/index.html
+++ b/index.html
@@ -134,6 +134,138 @@
             </div>
         </div>
 
+        <!-- Sales Section -->
+        <div id="sales" class="mb-8">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">العروض الخاصة</h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+                <!-- Sale Product 1 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="Images/perfume.jpg" alt="Sale Product 1" class="w-full h-48 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800">كريم الشعر</h3>
+                        <p class="text-gray-600 mt-2">خصم 20% على كريم الشعر.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-lg font-bold text-yellow-400"><del>60.00 درهم</del> 48.00 درهم</span>
+                            <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
+                                <i class="fas fa-cart-plus"></i> إضافة إلى السلة
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Sale Product 2 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="Images/product1.jpg" alt="Sale Product 2" class="w-full h-48 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800">فرشاة المكياج</h3>
+                        <p class="text-gray-600 mt-2">خصم 15% على فرشاة المكياج.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-lg font-bold text-yellow-400"><del>35.00 درهم</del> 29.75 درهم</span>
+                            <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
+                                <i class="fas fa-cart-plus"></i> إضافة إلى السلة
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Sale Product 3 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="Images/product2.jpg" alt="Sale Product 3" class="w-full h-48 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800">عطر فاخر</h3>
+                        <p class="text-gray-600 mt-2">خصم 25% على العطر الفاخر.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-lg font-bold text-yellow-400"><del>150.00 درهم</del> 112.50 درهم</span>
+                            <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
+                                <i class="fas fa-cart-plus"></i> إضافة إلى السلة
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Sale Product 4 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="Images/product3.jpg" alt="Sale Product 4" class="w-full h-48 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800">مصل الشعر</h3>
+                        <p class="text-gray-600 mt-2">خصم 30% على مصل الشعر.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-lg font-bold text-yellow-400"><del>100.00 درهم</del> 70.00 درهم</span>
+                            <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
+                                <i class="fas fa-cart-plus"></i> إضافة إلى السلة
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Recommended Section -->
+        <div id="recommended" class="mb-8">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">منتجات موصى بها</h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+                <!-- Recommended Product 1 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="Images/hair-cream.jpg" alt="Recommended Product 1" class="w-full h-48 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800">ماسك الوجه</h3>
+                        <p class="text-gray-600 mt-2">ماسك لتنقية البشرة.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-lg font-bold text-yellow-400">40.00 درهم</span>
+                            <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
+                                <i class="fas fa-cart-plus"></i> إضافة إلى السلة
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Recommended Product 2 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="Images/makeup-brush.jpg" alt="Recommended Product 2" class="w-full h-48 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800">بلسم الشعر</h3>
+                        <p class="text-gray-600 mt-2">بلسم لتغذية الشعر.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-lg font-bold text-yellow-400">25.00 درهم</span>
+                            <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
+                                <i class="fas fa-cart-plus"></i> إضافة إلى السلة
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Recommended Product 3 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="Images/product4.jpg" alt="Recommended Product 3" class="w-full h-48 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800">مكياج عيون</h3>
+                        <p class="text-gray-600 mt-2">ألوان مكياج عيون مميزة.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-lg font-bold text-yellow-400">55.00 درهم</span>
+                            <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
+                                <i class="fas fa-cart-plus"></i> إضافة إلى السلة
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Recommended Product 4 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="Images/product2.jpg" alt="Recommended Product 4" class="w-full h-48 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-xl font-bold text-gray-800">غسول الجسم</h3>
+                        <p class="text-gray-600 mt-2">غسول لترطيب الجسم.</p>
+                        <div class="flex justify-between items-center mt-4">
+                            <span class="text-lg font-bold text-yellow-400">35.00 درهم</span>
+                            <button class="bg-yellow-400 text-black px-4 py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
+                                <i class="fas fa-cart-plus"></i> إضافة إلى السلة
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Products Section -->
         <div id="products" class="mb-8">
             <h2 class="text-2xl font-bold text-gray-800 mb-4">المنتجات المميزة</h2>
