--- a/Product.html
+++ b/Product.html
@@ -200,8 +200,8 @@
 
                         <div class="mb-6">
                             <div class="flex items-center">
-                                <span class="text-primary font-bold text-2xl">9.99 دولار</span>
-                                <span class="text-gray-400 text-lg line-through mr-2">11.99 دولار</span>
+                                <span class="text-primary font-bold text-2xl">9.99 درهم</span>
+                                <span class="text-gray-400 text-lg line-through mr-2">11.99 درهم</span>
                                 <span class="bg-red-100 text-red-800 text-xs font-medium px-2 py-1 rounded">خصم 15%</span>
                             </div>
                         </div>
