Updated and optimized various files to reduce some errors
files udated: categorys.js,dashboard.js,newProduct.js,orders.js,products.js,sidebar.js,users.js and added sw.js and notificatioHandler.js

--- a/Admin/index.html
+++ b/Admin/index.html
@@ -148,16 +148,16 @@
 
                     switch (permissions[0]) {
                         case 'gererDashboard':
-                            window.location.href = "Dashboard.php";
+                            window.location.href = "dashboard.php";
                             break;
                         case 'gererProducts':
-                            window.location.href = "Products.php";
+                            window.location.href = "products.php";
                             break;
                         case 'gererOrders':
-                            window.location.href = "Orders.php";
+                            window.location.href = "orders.php";
                             break;
                         case 'gererUsers':
-                            window.location.href = "Clients.php";
+                            window.location.href = "clients.php";
                             break;
                         default:
                             window.location.href = "index.php";
