--- a/sbaishop-template.html
+++ b/sbaishop-template.html
@@ -618,6 +618,6 @@
         </footer>
         <!-- Swiper JS -->
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-        <script src="Client JS/Swiper.js"></script>
+        <script src="client js/Swiper.js"></script>
     </body>
 </html>
