--- a/index.html
+++ b/index.html
@@ -359,123 +359,13 @@
                     <h2
                         class="text-3xl font-display font-bold text-center mb-12">العروض
                         الخاصة</h2>
+                    <div id="promotions-error-message"
+                        class="hidden bg-red-100 text-red-700 px-4 py-2 rounded-md mb-4 text-center"></div>
 
-                    <div
+                    <div id="promotions-grid"
                         class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                        <!-- Promotion 1 -->
-                        <div
-                            class="bg-white rounded-lg overflow-hidden shadow-md">
-                            <div class="relative">
-                                <img src="images/product1.jpg"
-                                    alt="خصم على زيت الأركان"
-                                    class="w-full h-64 object-cover">
-                                <div
-                                    class="absolute top-3 right-3 bg-primary text-white text-sm font-medium px-2 py-1 rounded">خصم
-                                    20%</div>
-                            </div>
-                            <div class="p-4">
-                                <h3 class="font-medium text-lg mb-2">زيت أركان
-                                    طبيعي
-                                    عضوي</h3>
-                                <p class="text-gray-600 text-sm mb-3">زيت أركان
-                                    أصلي
-                                    من جبال الأطلس المغربية، مفيد للبشرة
-                                    والشعر</p>
-                                <div class="flex justify-between items-center">
-                                    <div>
-                                        <span
-                                            class="font-bold text-primary text-lg">19.99
-                                            درهم</span>
-                                        <span
-                                            class="text-gray-500 text-sm line-through mr-2">24.99
-                                            درهم</span>
-                                    </div>
-                                    <div class="add-to-cart-container"
-                                        data-id="5">
-                                        <button
-                                            class="add-to-cart bg-primary text-white px-3 py-1 rounded-md hover:bg-secondary transition-colors">
-                                            إضافة للسلة
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <!-- Loading State -->
 
-                        <!-- Promotion 2 -->
-                        <div
-                            class="bg-white rounded-lg overflow-hidden shadow-md">
-                            <div class="relative">
-                                <img src="images/product2.jpg"
-                                    alt="خصم على بهارات رأس الحانوت"
-                                    class="w-full h-64 object-cover">
-                                <div
-                                    class="absolute top-3 right-3 bg-primary text-white text-sm font-medium px-2 py-1 rounded">خصم
-                                    15%</div>
-                            </div>
-                            <div class="p-4">
-                                <h3 class="font-medium text-lg mb-2">مزيج بهارات
-                                    رأس
-                                    الحانوت</h3>
-                                <p class="text-gray-600 text-sm mb-3">خليط فريد
-                                    من
-                                    التوابل المغربية المتوازنة، مثالي للطاجين
-                                    والكسكس</p>
-                                <div class="flex justify-between items-center">
-                                    <div>
-                                        <span
-                                            class="font-bold text-primary text-lg">10.62
-                                            درهم</span>
-                                        <span
-                                            class="text-gray-500 text-sm line-through mr-2">12.50
-                                            درهم</span>
-                                    </div>
-                                    <div class="add-to-cart-container"
-                                        data-id="6">
-                                        <button
-                                            class="add-to-cart bg-primary text-white px-3 py-1 rounded-md hover:bg-secondary transition-colors">
-                                            إضافة للسلة
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Promotion 3 -->
-                        <div
-                            class="bg-white rounded-lg overflow-hidden shadow-md">
-                            <div class="relative">
-                                <img src="images/product3.jpg"
-                                    alt="خصم على الشاي المغربي"
-                                    class="w-full h-64 object-cover">
-                                <div
-                                    class="absolute top-3 right-3 bg-primary text-white text-sm font-medium px-2 py-1 rounded">خصم
-                                    10%</div>
-                            </div>
-                            <div class="p-4">
-                                <h3 class="font-medium text-lg mb-2">شاي أخضر
-                                    بالنعناع المغربي</h3>
-                                <p class="text-gray-600 text-sm mb-3">شاي أخضر
-                                    مع
-                                    نعناع مغربي طازج، منعش ومنشط، أصيل ومميز</p>
-                                <div class="flex justify-between items-center">
-                                    <div>
-                                        <span
-                                            class="font-bold text-primary text-lg">8.99
-                                            درهم</span>
-                                        <span
-                                            class="text-gray-500 text-sm line-through mr-2">9.99
-                                            درهم</span>
-                                    </div>
-                                    <div class="add-to-cart-container"
-                                        data-id="7">
-                                        <button
-                                            class="add-to-cart bg-primary text-white px-3 py-1 rounded-md hover:bg-secondary transition-colors">
-                                            إضافة للسلة
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
 
                     <div class="text-center mt-12">
@@ -680,7 +570,7 @@
                             <p class="text-gray-400 mb-4">اكتشف مجموعة واسعة من
                                 انواع الشاي الصحراوي الأصيل.</p>
                             <div class="flex space-x-4 space-x-reverse">
-                                <a href="#"
+                                <a href="facebook.com"
                                     class="text-gray-400 hover:text-primary transition-colors">
                                     <svg class="w-6 h-6" fill="currentColor"
                                         viewBox="0 0 24 24" aria-hidden="true">
@@ -689,7 +579,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </a>
-                                <a href="#"
+                                <a href="instagram.com"
                                     class="text-gray-400 hover:text-primary transition-colors">
                                     <svg class="w-6 h-6" fill="currentColor"
                                         viewBox="0 0 24 24" aria-hidden="true">
@@ -698,7 +588,7 @@
                                             clip-rule="evenodd"></path>
                                     </svg>
                                 </a>
-                                <a href="#"
+                                <a href="x.com"
                                     class="text-gray-400 hover:text-primary transition-colors">
                                     <svg class="w-6 h-6" fill="currentColor"
                                         viewBox="0 0 24 24" aria-hidden="true">
@@ -723,29 +613,6 @@
                             </ul>
                         </div>
 
-                        <!-- Categories -->
-                        <div>
-                            <h4 class="font-bold text-lg mb-4">فئات
-                                المنتجات</h4>
-                            <ul class="space-y-2">
-                                <li><a href="#"
-                                        class="text-gray-400 hover:text-primary transition-colors">التوابل
-                                        والبهارات</a></li>
-                                <li><a href="#"
-                                        class="text-gray-400 hover:text-primary transition-colors">الزيوت
-                                        الطبيعية</a></li>
-                                <li><a href="#"
-                                        class="text-gray-400 hover:text-primary transition-colors">الحلويات
-                                        المغربية</a></li>
-                                <li><a href="#"
-                                        class="text-gray-400 hover:text-primary transition-colors">الشاي
-                                        والأعشاب</a></li>
-                                <li><a href="#"
-                                        class="text-gray-400 hover:text-primary transition-colors">منتجات
-                                        التجميل</a></li>
-                            </ul>
-                        </div>
-
                         <!-- Contact Info -->
                         <div>
                             <h4 class="font-bold text-lg mb-4">معلومات
@@ -765,8 +632,7 @@
                                             stroke-width="2"
                                             d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
                                     </svg>
-                                    <span class="text-gray-400">123 شارع ماكجيل،
-                                        مونتريال، كيبيك</span>
+                                    <span class="text-gray-400">شارع قيراوان، العيون</span>
                                 </li>
                                 <li class="flex items-start">
                                     <svg xmlns="http://www.w3.org/2000/svg"
@@ -779,7 +645,7 @@
                                             d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                                     </svg>
                                     <span
-                                        class="text-gray-400">info@maghrebmarket.ca</span>
+                                        class="text-gray-400">info@sbaishop.com</span>
                                 </li>
                                 <li class="flex items-start">
                                     <svg xmlns="http://www.w3.org/2000/svg"
@@ -791,8 +657,7 @@
                                             stroke-width="2"
                                             d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
                                     </svg>
-                                    <span class="text-gray-400">+1 (514)
-                                        123-4567</span>
+                                    <span class="text-gray-400">+212 600 000 000</span>
                                 </li>
                                 <li class="flex items-start">
                                     <svg xmlns="http://www.w3.org/2000/svg"
@@ -829,12 +694,6 @@
             <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
             <script
                 src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-            <script src="client js/fetchFeatured.js"></script>
-            <script src="client js/FetchCategories.js"></script>
             <script src="client js/index.js"></script>
-
-            <script>
-                
-            </script>
         </body>
     </html>
