--- a/Cart.html
+++ b/Cart.html
@@ -147,17 +147,17 @@
 
                     <!-- Desktop Search Bar -->
                     <div class="search-container">
-                        <form class="relative">
+                        <div class="relative">
                             <input type="text" placeholder="ابحث عن منتجات..."
                                 class="search-input focus:ring-2 focus:ring-primary focus:border-primary">
-                            <button type="submit" class="search-icon text-gray-500 hover:text-primary">
+                            <div class="search-icon text-gray-500 hover:text-primary">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke="currentColor" class="w-5 w-5">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                         d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
                                 </svg>
-                            </button>
-                        </form>
+                            </div>
+                        </div>
                     </div>
                 </nav>
 
