refactor: update script paths to use lowercase and hyphenated naming convention

--- a/checkOut.Html
+++ b/checkOut.Html
@@ -365,7 +365,7 @@
 
     <!-- SweetAlert JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="Client JS/checkout.js"></script>
+    <script src="client-JS/checkout.js"></script>
 
     <!-- <script>
         // Mobile Menu Toggle
