--- a/cart.html
+++ b/cart.html
@@ -404,7 +404,7 @@
     <!-- SweetAlert JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <script src="Client JS/cart.js"></script>
+    <script src="client-JS/cart.js"></script>
 
     <!-- <script>
         // Mobile Menu Toggle
