--- a/product.html
+++ b/product.html
@@ -620,7 +620,7 @@
 
     <!-- SweetAlert JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="Client JS/product.js"></script>
+    <script src="client-JS/product.js"></script>
 
     <!-- <script>
         // Cart data
