fix: update image paths to lowercase for consistency

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         }
 
         .hero-section {
-            background-image: url('Images/Tassaout tea.jpg');
+            background-image: url('images/Tassaout tea.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -505,7 +505,7 @@
                         الحقيقي! 🌿🍵🍯</p>
                 </div>
                 <div class="w-full md:w-1/2">
-                    <img src="Images/product1.jpg" alt="متجر السباعي" class="w-full h-auto rounded-lg shadow-md">
+                    <img src="images/product1.jpg" alt="متجر السباعي" class="w-full h-auto rounded-lg shadow-md">
                 </div>
             </div>
         </div>
