fix: update image paths to lowercase for consistency

--- a/cart.html
+++ b/cart.html
@@ -180,20 +180,20 @@
         <div id="mobileMenu" class="md:hidden hidden bg-white border-t">
             <div class="p-4">
                 <!-- Mobile Search Bar -->
-                <form class="mb-4">
+                <div class="mb-4">
                     <div class="relative">
                         <input type="text" placeholder="ابحث عن منتجات..."
-                            class="w-full py-2 px-3 pr-10 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary">
-                        <button type="submit"
+                            class="search-input w-full py-2 px-3 pr-10 rounded-md border border-gray-300 focus:outline-none focus:ring-2 focus:ring-primary focus:border-primary">
+                        <div
                             class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-primary">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor" class="w-5 h-5">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
                             </svg>
-                        </button>
+                        </div>
                     </div>
-                </form>
+                </div>
 
                 <ul class="space-y-2">
                     <li><a href="index.html"
