fix: update meta description and change cart link to lowercase

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>متجر السباعي</title>
-    <meta name="description" content="متجر للمنتجات المغربية الأصيلة بتصميم أنيق" />
+    <meta name="description"
+        content="أفضل وجهة لشراء الشاي الصحراوي الأصيل والمنتجات المغربية المميزة، بالإضافة إلى أجود أنواع الشوكولاتة المستوردة من إسبانيا." />
     <meta name="author" content="متجر السباعي" />
     <meta property="og:image" content="/og-image.png" />
     <meta name="theme-color" content="#FF9E2C">
@@ -224,7 +225,7 @@
 
                 <!-- Cart Icon -->
                 <div class="flex items-center space-x-4 space-x-reverse">
-                    <a href="Cart.html" class="text-primary transition-colors relative">
+                    <a href="cart.html" class="text-primary transition-colors relative">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
