--- a/products.html
+++ b/products.html
@@ -253,7 +253,7 @@
 
                 <!-- Cart Icon -->
                 <div class="flex items-center space-x-4 space-x-reverse">
-                    <a href="Cart.html" class="text-primary transition-colors relative">
+                    <a href="cart.html" class="text-primary transition-colors relative">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
