fix: adjust product card hover effect and update grid layout for better responsiveness

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         }
 
         .product-card:hover {
-            transform: translateY(-5px);
+            /* transform: translateY(-5px); */
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
         }
 
@@ -171,7 +171,7 @@
         }
 
         .quantity-display {
-            min-width: 1.5rem;
+            min-width: 0.75rem;
             text-align: center;
             font-size: 0.875rem;
         }
@@ -321,7 +321,7 @@
             <div id="Products-error-message"
                 class="hidden bg-red-100 text-red-700 px-4 py-2 rounded-md mb-4 text-center"></div>
 
-            <div id="Products-grid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+            <div id="Products-grid" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
                 <!-- Loading State -->
             </div>
             <div class="text-center mt-12">
