--- a/cart.html
+++ b/cart.html
@@ -163,14 +163,14 @@
 
                 <!-- Cart Icon -->
                 <div class="flex items-center space-x-4 space-x-reverse">
-                    <a href="Cart.html" class="text-primary transition-colors relative">
+                    <a href="Cart.html" class="text-green-500 transition-colors relative">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                             class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"></path>
                         </svg>
                         <span id="cartCount"
-                            class="absolute -top-2 -right-2 bg-primary text-white rounded-full w-5 h-5 flex items-center justify-center text-xs">0</span>
+                            class="absolute -top-2 -right-2 bg-green-500 text-white rounded-full w-5 h-5 flex items-center justify-center text-xs">0</span>
                     </a>
                 </div>
             </div>
