--- a/admin/PassForgoten.html
+++ b/admin/PassForgoten.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>نسيت كلمة المرور - Soubai Shop</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- SweetAlert Library -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
-        body { font-family: 'Tajawal', sans-serif; }
+        body {
+            font-family: 'Tajawal', sans-serif;
+        }
     </style>
 </head>
+
 <body class="bg-gray-100 text-black flex items-center justify-center min-h-screen p-4">
     <!-- Forgot Password Form -->
     <div class="bg-white p-6 sm:p-8 rounded-lg shadow-md w-full max-w-sm sm:max-w-md md:max-w-lg text-center">
@@ -25,20 +32,14 @@
                 <label for="email" class="block text-right text-gray-700 mb-2">
                     <i class="fas fa-envelope text-gray-500"></i> البريد الإلكتروني
                 </label>
-                <input 
-                    id="email" 
-                    type="email" 
-                    class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400" 
-                    placeholder="أدخل بريدك الإلكتروني"
-                    required
-                >
+                <input id="email" type="email"
+                    class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
+                    placeholder="أدخل بريدك الإلكتروني" required>
             </div>
 
             <!-- Submit Button -->
-            <button 
-                type="submit" 
-                class="w-full bg-yellow-400 text-black py-2 rounded-lg hover:bg-yellow-500 transition duration-300"
-            >
+            <button onclick="sendEmail()"
+                class="w-full bg-yellow-400 text-black py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
                 <i class="fas fa-paper-plane"></i> إرسال رابط إعادة التعيين
             </button>
 
@@ -51,6 +52,77 @@
         </div>
     </div>
     <script>
+        async function sendEmail() {
+            const emailInput = document.getElementById('email');
+            const email = emailInput.value.trim();
+
+            // Validate email input
+            if (!email) {
+                Swal.fire({
+                    icon: 'warning',
+                    title: 'تنبيه',
+                    text: 'يرجى إدخال البريد الإلكتروني.',
+                });
+                return;
+            }
+
+            const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            if (!emailRegex.test(email)) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'خطأ',
+                    text: 'يرجى إدخال بريد إلكتروني صالح.',
+                });
+                return;
+            }
+
+            // Show loading Swal popup
+            Swal.fire({
+                title: 'جاري الإرسال...',
+                text: 'يرجى الانتظار قليلاً.',
+                allowOutsideClick: false,
+                didOpen: () => {
+                    Swal.showLoading();
+                }
+            });
+
+            try {
+                // Send email to the API
+                const response = await fetch('https://sbaishop.com/api/forgot-password', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ email }),
+                });
+
+                if (response.ok) {
+                    Swal.fire({
+                        icon: 'success',
+                        title: 'تم الإرسال',
+                        text: 'تم إرسال رابط إعادة التعيين إلى بريدك الإلكتروني.',
+                    }).then(() => {
+                        // Redirect to Token.html on success
+                        sessionStorage.setItem('userMail', email);
+                        window.location.href = 'Token.html';
+                    });
+                } else {
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'خطأ',
+                        text: 'حدث خطأ أثناء إرسال البريد الإلكتروني. يرجى المحاولة مرة أخرى.',
+                    });
+                }
+            } catch (error) {
+                console.error('Error:', error);
+                Swal.fire({
+                    icon: 'error',
+                    title: 'خطأ',
+                    text: 'تعذر الاتصال بالخادم. يرجى المحاولة لاحقًا.',
+                });
+            }
+        }
     </script>
 </body>
+
 </html>
