--- a/admin/Token.html
+++ b/admin/Token.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>إدخال الرمز - Soubai Shop</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <!-- SweetAlert Library -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
-        body { font-family: 'Tajawal', sans-serif; }
+        body {
+            font-family: 'Tajawal', sans-serif;
+        }
     </style>
 </head>
+
 <body class="bg-gray-100 text-black flex items-center justify-center min-h-screen p-4">
     <!-- Token Verification Form -->
     <div class="bg-white p-6 sm:p-8 rounded-lg shadow-md w-full max-w-sm sm:max-w-md md:max-w-lg text-center">
@@ -25,27 +33,20 @@
                 <label for="token" class="block text-right text-gray-700 mb-2">
                     <i class="fas fa-key text-gray-500"></i> الرمز
                 </label>
-                <input 
-                    id="token" 
-                    type="text" 
-                    class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400" 
-                    placeholder="أدخل الرمز المكون من 6 أرقام"
-                    required
-                    maxlength="6"
-                >
+                <input id="token" type="text"
+                    class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
+                    placeholder="أدخل الرمز المكون من 10 رموز" required maxlength="10">
             </div>
 
             <!-- Submit Button -->
-            <a href="PassReset.html"><button 
-                type="submit" 
-                class="w-full bg-yellow-400 text-black py-2 rounded-lg hover:bg-yellow-500 transition duration-300"
-            >
-                <i class="fas fa-check"></i> تأكيد الرمز
-            </button></a>
+            <a href="PassReset.html"><button type="submit"
+                    class="w-full bg-yellow-400 text-black py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
+                    <i class="fas fa-check"></i> تأكيد الرمز
+                </button></a>
 
             <!-- Resend Token Link -->
-            <p class="mt-4 text-gray-600">
-                لم تستلم الرمز؟ 
+            <p class="mt-4 text-gray-600" id="resendToken">
+                لم تستلم الرمز؟
                 <a href="#" class="text-yellow-500 hover:underline">
                     <i class="fas fa-redo"></i> إعادة إرسال الرمز
                 </a>
@@ -59,5 +60,87 @@
             </p>
         </div>
     </div>
+    <script>
+        let userMail = null
+        async function sendToken() {
+            const tokenInput = document.getElementById('token');
+            const tokenValue = tokenInput.value.trim();
+
+            if (tokenValue.length !== 10) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'خطأ',
+                    text: 'يجب أن يكون الرمز مكونًا من 10 رموز.',
+                });
+                return;
+            }
+
+            // Show loading Swal popup
+            Swal.fire({
+                title: 'جاري الإرسال...',
+                text: 'يرجى الانتظار قليلاً.',
+                allowOutsideClick: false,
+                didOpen: () => {
+                    Swal.showLoading();
+                }
+            });
+
+            try {
+
+                const response = await fetch('https://sbaishop.com/api/validate-token', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({
+                        token: tokenValue,
+                        email: userMail
+                    }),
+                });
+
+                if (response.ok) {
+                    sessionStorage.setItem('resetToken', tokenValue)
+                    window.location.href = 'PassReset.html';
+                } else {
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'خطأ',
+                        text: 'الرمز غير صحيح أو حدث خطأ ما.',
+                    });
+                }
+            } catch (error) {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'خطأ',
+                    text: 'حدث خطأ أثناء الاتصال بالخادم.',
+                });
+            }
+        }
+
+        document.addEventListener("DOMContentLoaded", () => {
+            userMail = sessionStorage.getItem('userMail')
+            if (!userMail) {
+                window.location.href = 'index.html';
+                return
+            }
+            const resendTokenElement = document.getElementById('resendToken');
+            let counter = 60;
+
+            const interval = setInterval(() => {
+                if (counter > 0) {
+                    resendTokenElement.innerHTML = `لم تستلم الرمز؟ <span class="text-gray-500">(${counter--} ثانية)</span> يمكنك إعادة المحاولة بعد`;
+                } else {
+                    clearInterval(interval);
+                    resendTokenElement.innerHTML = `
+                لم تستلم الرمز؟
+                <a href="#" class="text-yellow-500 hover:underline">
+                    <i class="fas fa-redo"></i> إعادة إرسال الرمز
+                </a>
+                `;
+                }
+            }, 1000);
+        });
+    </script>
 </body>
+
 </html>
