feat: add settings management page with shipping options and update functionality

--- a/cart.html
+++ b/cart.html
@@ -249,6 +249,9 @@
                                 <span class="text-gray-600">الشحن</span>
                                 <span class="font-medium" id="shipping">5.00 درهم</span>
                             </div>
+                            <div id="freeShippingMessage" class="text-sm text-gray-500 mt-2">
+                                أضف منتجات بقيمة <span id="remainingAmount">50.00</span> درهم للحصول على شحن مجاني!
+                            </div>
                             <div class="flex justify-between border-t border-gray-200 pt-4">
                                 <span class="text-lg font-bold">المجموع</span>
                                 <span class="text-lg font-bold text-primary" id="total">5.00 درهم</span>
